No player button outline and prevent cover overflow into padding

--- a/web-ui/src/components/player/style.css
+++ b/web-ui/src/components/player/style.css
@@ -60,4 +60,5 @@
   border: none;
   cursor: pointer;
   overflow: hidden;
+  outline: none;
 }
